--- a/helloworld.cabal
+++ b/helloworld.cabal
@@ -44,8 +44,10 @@ library
     -Wredundant-constraints
 
   build-depends:
-    base >=4.20 && <5
+    base >=4.20 && <5,
+    cabal-gild,
 
+  build-tool-depends: cabal-gild:cabal-gild >=1.6.0.0
   default-language: Haskell2010
 
 executable helloworld-exe
