--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
     "ghc": "9.10.1",
     "hls": "2.9.0.1",
     "cabal": "3.14.2.0"
-  }
+  },
+  "ormolu.path": "~/.cabal/bin/ormolu",
+  "editor.defaultFormatter": "sjurmillidahl.ormolu-vscode"
 }
