--- a/helloworld.cabal
+++ b/helloworld.cabal
@@ -53,7 +53,10 @@ library
     -- For try/catch
     exceptions,
     cabal-gild,
-  build-tool-depends: cabal-gild:cabal-gild >=1.6.0.0
+  build-tool-depends:
+    cabal-gild:cabal-gild >=1.6.0.0,
+    ormolu:ormolu >= 0.8.0.0,
+    hlint:hlint >= 3.8.0.0,
   default-language: Haskell2010
 
 executable helloworld-exe
