--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,5 +32,5 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - run: make build
-      - run: make check
+      # - run: make check
       - run: make test
