--- a/helloworld.cabal
+++ b/helloworld.cabal
@@ -79,7 +79,6 @@ executable helloworld-exe
     -threaded
     -rtsopts
     -with-rtsopts=-N
-
   build-depends:
     -- Base library
     base >=4.20 && <5,
@@ -116,7 +115,6 @@ test-suite helloworld-test
     -threaded
     -rtsopts
     -with-rtsopts=-N
-
   build-depends:
     -- Testing
     HUnit ^>=1.6,
@@ -126,6 +124,35 @@ test-suite helloworld-test
     base >=4.20 && <5,
     -- For try/catch
     exceptions,
+    -- Main library
+    helloworld,
+    -- Text manipulation
+    text ^>=2.1,
+
+  default-language: Haskell2010
+
+executable examples
+  main-is: Main.hs
+  hs-source-dirs:
+    examples
+
+  ghc-options:
+    -Wall
+    -Wcompat
+    -Widentities
+    -Wincomplete-record-updates
+    -Wincomplete-uni-patterns
+    -Wmissing-export-lists
+    -Wmissing-home-modules
+    -Wpartial-fields
+    -Wredundant-constraints
+    -threaded
+    -rtsopts
+    -with-rtsopts=-N
+
+  build-depends:
+    -- Base library
+    base >=4.20 && <5,
     -- Main library
     helloworld,
     -- Text manipulation
